# FastAPItest

./: .env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 91580f84f92f_database_creation.py
src/: config.py  database.py  main.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: orders.py  user.py
src/auth/: base_config.py  manager.py  models.py  router.py  schemas.py
src/core/: auth.py
src/crud/: __init__.py  base.py  crud_orders.py  crud_user.py
src/db/: utils.py
src/models/: order.py  user.py
src/orders/: models.py  router.py  schemas.py
src/schemas/: order.py  user.py
