[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["Gareginbadalov <Garick.badalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.93.0"}
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.5.post1"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.0"}
asyncpg = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
